Fix bufferkey input visibility

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -1084,6 +1084,11 @@
 }
 
 /* Buffer Key */
+.kiwi-bufferkey input[type='password'] {
+    color: var(--brand-default-fg);
+    background-color: var(--brand-default-bg);
+}
+
 .kiwi-bufferkey-button {
     border-color: var(--brand-default-bg);
 }
